added entities placeholder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Infinipy.egg-info/SOURCES.txt
 Infinipy.egg-info/dependency_links.txt
 Infinipy.egg-info/PKG-INFO
 Infinipy.egg-info/top_level.txt
+*.pyc
