--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Infinipy.egg-info/dependency_links.txt
 Infinipy.egg-info/PKG-INFO
 Infinipy.egg-info/top_level.txt
 *.pyc
+oryx_16-bit_fantasy_1.1.zip
